fix: proper alignment for sort button

--- a/client/src/scss/02-components/_angular-material-components.scss
+++ b/client/src/scss/02-components/_angular-material-components.scss
@@ -141,6 +141,10 @@ tr.mat-row.mat-row {
   }
 }
 
+.mat-sort-header-button.mat-sort-header-button {
+  text-align: left;
+}
+
 // Mobile layout
 @media (max-width: $screen-s) {
   .mat-header-row {
